--- a/server/templates/new_stream.html
+++ b/server/templates/new_stream.html
@@ -1,9 +1,12 @@
 {% include "header.html" %}
+<script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
+
 <div class="arrow" id="menu"></div>
 <div class="body">
 
 <table class="social_buttons">
 <tr>
+    <td><g:plusone size="medium"></g:plusone></td>
     <td align="right"><a href="/report?link=/new_links">{{ lang|translation:'report' }}</a></td>
 </tr>
 </table>
