--- a/server/templates/new_request.html
+++ b/server/templates/new_request.html
@@ -1,15 +1,18 @@
 {% include "header.html" %}
+<script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
+
 <div class="arrow" id="menu"></div>
 <div class="body">
 
 <table class="social_buttons">
 <tr>
+    <td><g:plusone size="medium"></g:plusone></td>
     <td align="right"><a href="/report?link=/new_request">{{ lang|translation:'report' }}</a></td>
 </tr>
 </table>
 
 <div class="stream_description">
-<form action="/new_request" method="post">
+<form name="request" action="/new_request" method="post">
     {{ lang|translation:'description'|capfirst }}:
     <textarea name="description" rows="10"></textarea>
     {{ lang|translation:'yourmail'|capfirst }}: <input name="email" type="text" value="fuck@you.com"/>
